scoreboard - team answers
